# lambdacompiler

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: testfile  testfile.asm  testfile.lambda
include/: BinaryOperation.hpp  Constants.hpp  FileHandler.hpp  Literal.hpp  Parser.hpp  Sign.hpp  Statement.hpp  Tree.hpp  functions.asm  visitor.hpp
lib/: functions.asm
output/: functions.asm  hello  hello.s  hola.asm  simple.asm
src/: Assembly.cpp  Assembly.h  Ast.h  BinaryOperation.h  Constants.h  FileHandler.cpp  FileHandler.h  Lexer.cpp  Lexer.h  Node.h  Parser.cpp  Parser.h  Stack.h  Token.cpp  Token.h  Tree.cpp  Tree.h  main.cpp
tests/: FileHandler-test.cpp  Lexer-test.cpp  Parser-test.cpp  assembly  assembly.asm  hello.s  test.lambda  testfile  testfile.asm  testfile.lambda
